Made navbar collapse only in xs view. (fixes #4)
Compos and games now collapse together while in sm view.
This makes the navbar small enough to not wrap around.
This behaviour does not appear for users who are logged out.

--- a/app/assets/stylesheets/include/bootswatch/bootswatch_variables.css.scss
+++ b/app/assets/stylesheets/include/bootswatch/bootswatch_variables.css.scss
@@ -160,7 +160,7 @@ $grid-columns:              12;
 $grid-gutter-width:         30px;
 // Point at which the navbar stops collapsing
 // TODO: Maybe collapse at sm (like default) and move games/compo's into 1 during md
-$grid-float-breakpoint:     $screen-md-min;
+$grid-float-breakpoint:     $screen-sm-min;
 
 
 // Tabs
